<resources>
    <string name="app_name">Alz-Jaime</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>
    <string name="ti_login"> Iniciar Sesión</string>
    <string name="txv_correo">Correo Electrónico: </string>
    <string name="txv_contrasena">Contraseña: </string>
    <string name="txv_nombre">Nombre: </string>
    <string name="txv_apellido">Apellidos: </string>
    <string name="txv_Direc">Dirección: </string>
    <string name="txv_Tel">Teléfono: </string>
    <string name="txv_edad">Edad: </string>
    <string name="txv_padecimiento">Padecimiento: </string>
    <string name="bt_registrarse">Registrarse</string>

    <string name="bt_aceptar">Aceptar</string>
    <string name="bt_editar">Editar</string>
    <string name="txv_recuperar">¿Olvidaste tu contraseña? Recuperala</string>
    <string name="menu_home">Inicio</string>
    <string name="bnv_cuidadores">Cuidadores </string>
    <string name="ti_Persona">Persona a cargo</string>
    <string name="bnv_calenda">Calendario</string>
    <string name="bnv_medicamento">Medicamentos</string>
    <string name="mh_usuario">Usuario</string>
    <string name="mh_medsinre">Medicamento sin receta</string>
    <string name="mh_medconre">Medicamento con receta</string>
    <string name="mh_ayuda">Ayuda</string>
    <string name="ti_termycon">Términos y condiciones</string>
    <string name="ti_contacto">Contáctanos</string>
    <string name="ti_cerrar">Cerrar Sesión</string>
    <string name="ti_Alarmas">Alarmas</string>
    <string name="ti_preguntas">Preguntas Frecuentes</string>
    <string name="bt_anadir">Añadir Alarma</string>
    <string name="txv_alarma">Alarmas del día</string>
    <string name="ti_configurar">Configurar Alarma</string>
    <string name="ti_registromed">Registro Médico</string>
    <string name="txv_diagnostico">Diagnóstico</string>
    <string name="cont_term">Tenemos el mayor respeto por su privacidad e información personal y somos conscientes de que el éxito de nuestros servicios depende de la confianza que tenga en la forma en que manejamos su información, nos gustaría asegurarle nuestro compromiso de mantener la privacidad de dicha información. Hemos tomado medidas considerables para proteger la confidencialidad, seguridad e integridad de esta información. Le recomendamos que revise determinadamente la siguiente información.</string>
    <string name="cont_term2">Cuando utiliza nuestro servicio acepta la recopilación, el almacenamiento, el uso, la divulgación y otros usos de su información personal como se describe en esta política de privacidad.</string>
    <string name="txv_pregunta1">¿Mis datos están seguros en Alz-Jaime?</string>
    <string name="txv_res1">En Alz-Jaime la seguridad de tus datos nos importan mucho es por eso que contamos con una política de privacidad la cual puedes consultar en nuestra app</string>
    <string name="txv_pregunta2">¿Qué información utiliza Alz-Jaime?</string>
    <string name="txv_pregunta3">¿Que pasa si no funciona algo en mi app?</string>
    <string name="txv_pregunta4">¿Cómo funciona la app?</string>
    <string name="txv_res2"> La información que utiliza la App Alz-Jaime para brindarle un mejor servicio es aprendida acerca de los datos que usted ingresa de los cuales la app va aprendiendo.</string>
    <string name="txv_res3">En Alz-Jaime contamos con servicio de soporte, puedes contactarte a cualquiera de nuestros medios de contacto y te ayudaremos a resolver el problema</string>
    <string name="txv_res4">La aplicación funciona mediante una alarma que avisa al usuario cuando debe tomar que medicamento, llevando un registro de los medicamentos que ha tomado el usuario</string>
    <string name="ti_calif">Calificanos</string>
    <string name="bt_calif">Calificar</string>
    <string name="ti_recuperar">Recuperar contraseña</string>
    <string name="txv_califica">Califica La aplicacion</string>
    <string name="txv_ingresarcod">Ingresar Código</string>
    <string name="txv_reenviar">Reenviar código</string>
    <string name="bt_sendco">Enviar código</string>
    <string name="txv_tomar">¿A qué hora se tomará el medicamento?</string>
    <string name="bt_camhora">Cambiar hora</string>
    <string name="txv_nombmed">Nombre del medicamento: </string>
    <string name="bt_cance">Cancelar</string>
    <string name="bt_env">Enviar</string>
    <string name="bt_guardar">Guardar</string>
    <string name="txv_nom">Nombre: </string>
    <string name="bt_biome">Registrarse con biométric</string>
    <string name="txv_newpass">Nueva contraseña: </string>
    <string name="txv_confnp">Confirmar nueva contraseña: </string>
    <string name="bt_borrar">Borrar</string>
    <string name="txv_reg">Aquí aparecerá su registro médico</string>
</resources>